[package]
name = "glium_text"
version = "0.10.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Text drawing with glium and freetype"
documentation = "https://docs.rs/glium_text"
repository = "https://github.com/tomaka/glium_text"
keywords = ["text", "opengl"]
license = "MIT"

[dependencies]
freetype-sys = "0.4"
libc = "0.2"

[dependencies.glium]
version = "0.16"
default-features = false

[dev-dependencies]
cgmath = "0.12"

[dev-dependencies.glium]
version = "0.16"
features = ["glutin"]
